# ot-harjoitusty-

./: README.md
documents/: tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/makro-app/dokumentaatio/: .coverage  README.md  arkkitehtuuri.md  changelog.md  pyproject.toml  tasks.py
laskarit/makro-app/dokumentaatio/src/: from tkinter import Tk, ttk, constants.py  makroapp.py
laskarit/makro-app/dokumentaatio/src/tests/: makroapp_test.py
laskarit/viikko1/: gitlog.txt  kometorivi.txt
laskarit/viikko2/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe/src/: .coverage  kassapaate.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
