[tool.poetry]
name = "poetry-testi"
version = "0.1.0"
description = ""
authors = ["tompppaaa <thomas.tran@helsinki.fi>"]
readme = "README.md"
packages = [{include = "poetry"}]

[tool.poetry.dependencies]
python = "^3.8"
cowsay = "^5.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
